--- a/puzzlers/pzzlr-037.html
+++ b/puzzlers/pzzlr-037.html
@@ -67,7 +67,7 @@ java.util.NoSuchElementException: next on empty iterator
   </p>
   <p>
     As explained in <a target="_blank" href="https://issues.scala-lang.org/browse/SI-4776">this ticket</a> and
-    <a target="_blank" href="http://www.scala-lang.org/api/current/index.html#scala.collection.Map">the API</a>,
+    <a target="_blank" href="http://www.scala-lang.org/api/current/index.html#scala.collection.Map">the Scaladoc</a>,
     <tt>mapValues</tt>
   </p>
   <blockquote><p style="font-size: 1.0em;">
