--- a/puzzlers/pzzlr-038.html
+++ b/puzzlers/pzzlr-038.html
@@ -70,7 +70,7 @@ scala.MatchError: 2 (of class java.lang.Integer)
   of the future is a boxed <tt>java.lang.Integer</tt>, the case does not match.
   </p>
   <p>
-  Since <a href="http://www.scala-lang.org/api/current/index.html#scala.concurrent.Future" target="_blank">
+  Since <a href="http://www.scala-lang.org/api/current/index.html#scala.concurrent.Future@onSuccess[U](pf:PartialFunction[T,U])(implicitexecutor:scala.concurrent.ExecutionContext):Unit" target="_blank">
   <tt>Future.onSuccess</tt></a> takes a partial function, there is no application
   and no <tt>MatchError</tt> is thrown.
   </p>
