--- a/puzzlers/pzzlr-050.html
+++ b/puzzlers/pzzlr-050.html
@@ -49,8 +49,8 @@ Not a symbol
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    In order to apply the <a href="http://www.scala-lang.org/api/current/index.html#scala.Symbol" target="_blank">
-    <tt>Symbol</tt></a>'s <tt>unapply</tt> method as part of the pattern match,
+    In order to apply the <a href="http://www.scala-lang.org/api/current/index.html#scala.Symbol$@unapply(other:V):Option[K]" target="_blank">
+    <tt>Symbol</tt>'s <tt>unapply</tt></a> method as part of the pattern match,
     the compiler needs to assign the variable being matched to the argument type
     for the method.
   </p>
