--- a/puzzlers/pzzlr-050.html
+++ b/puzzlers/pzzlr-050.html
@@ -50,9 +50,9 @@ Not a symbol
   <h3>Explanation</h3>
   <p>
     In order to apply the <a href="http://www.scala-lang.org/api/current/index.html#scala.Symbol$@unapply(other:V):Option[K]" target="_blank">
-    <tt>Symbol</tt>'s <tt>unapply</tt></a> method as part of the pattern match,
-    the compiler needs to assign the variable being matched to the argument type
-    for the method.
+    <tt>Symbol.unapply</tt></a> method as part of the pattern match, the compiler
+    needs to assign the variable being matched to the argument type for the
+    method.
   </p>
   <p>
     <tt>Symbol.unapply</tt> takes a <tt>Symbol</tt>, which inherits from 
