Formatting a class name in code font in 'Splitting Headache'

--- a/puzzlers/pzzlr-055.html
+++ b/puzzlers/pzzlr-055.html
@@ -69,7 +69,7 @@ false
   <h3>Explanation</h3>
   <p>
     The <tt>split(separators: Array[Char])</tt> method is provided by 
-    <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.StringOps@split(separators:Array[Char]):Array[String]" target="_blank">StringOps</a>
+    <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.StringOps@split(separators:Array[Char]):Array[String]" target="_blank"><tt>StringOps</tt></a>
     and splits a string around occurrences of a given array of characters. It would
     thus seem like a good candidate for checking whether <em>other</em> characters are
     present in a string: if the input string consists only of the separator 
