add correct choices

--- a/puzzlers/pzzlr-061.html
+++ b/puzzlers/pzzlr-061.html
@@ -48,32 +48,32 @@
         ...
       </pre>
      -->
+    <li>Prints
+      <pre class="prettyprint lang-scala">
+1
+1
+Empty :-(
+      </pre>
+    </li>
     <li id="correct-answer">Prints
       <pre class="prettyprint lang-scala">
-1
-1
-Nothing
-      </pre>
-    </li>
-    <li>Prints
-      <pre class="prettyprint lang-scala">
-Nothing
-Nothing
+Empty :-(
+Empty :-(
 1
       </pre>
     </li>
     <li>Prints
       <pre class="prettyprint lang-scala">
-Nothing
+Empty :-(
 1
 1
       </pre>
     </li>
     <li>Prints
       <pre class="prettyprint lang-scala">
-Nothing
-Nothing
-Nothing
+Empty :-(
+Empty :-(
+Empty :-(
       </pre>
     </li>
   </ol>
