Adding puzzler 66: 'Inference Hindrance'
Suggested by @bvenners, with improvements to the code sample
by @SethTisue. Thanks, Bill and Seth!

--- a/about.html
+++ b/about.html
@@ -168,6 +168,7 @@
               <li><a href="/#pzzlr-063" id="pzzlr-063">(Ex)Stream Surprise</a></li>
               <li><a href="/#pzzlr-064" id="pzzlr-064">Traversing Travesty</a></li>
               <li><a href="/#pzzlr-065" id="pzzlr-065">A Matter of Context</a></li>
+              <li><a href="/#pzzlr-066" id="pzzlr-066">Inference Hindrance</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
