--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             <li><a href="#" id="pzzlr-063">(Ex)Stream Surprise</a></li>
             <li><a href="#" id="pzzlr-064">Traversing Travesty</a></li>
             <li><a href="#" id="pzzlr-065">A Matter of Context</a></li>
+            <li><a href="#" id="pzzlr-066">Inference Hindrance</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
