--- a/contact.html
+++ b/contact.html
@@ -163,6 +163,7 @@
               <li><a href="/#pzzlr-058" id="pzzlr-058">The Branch Not Taken</a></li>
               <li><a href="/#pzzlr-059" id="pzzlr-059">A Result, Finally!</a></li>
               <li><a href="/#pzzlr-060" id="pzzlr-060">Unary Quandary</a></li>
+              <li><a href="/#pzzlr-061" id="pzzlr-061">Heads You Win...</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
