--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <li><a href="#" id="pzzlr-059">A Result, Finally!</a></li>
             <li><a href="#" id="pzzlr-060">Unary Quandary</a></li>
             <li><a href="#" id="pzzlr-061">Heads You Win...</a></li>
+            <li><a href="#" id="pzzlr-062">Identity Crisis</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
