--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <li><a href="#" id="pzzlr-060">Unary Quandary</a></li>
             <li><a href="#" id="pzzlr-061">Heads You Win...</a></li>
             <li><a href="#" id="pzzlr-062">Identity Crisis</a></li>
+            <li><a href="#" id="pzzlr-063">(Ex)Stream Surprise</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
