Ensuring the explanation for 'Identity Crisis' is hidden by default
Follow-up to 8fc3dd0da2. Thanks for pointing that out, @som-snytt!

--- a/puzzlers/pzzlr-062.html
+++ b/puzzlers/pzzlr-062.html
@@ -49,7 +49,7 @@ List(42, 17)
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
-<div id="explanation" class="explanation" >
+<div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
     Applying the <tt>identity</tt> function to an <tt>Option</tt> returns an
