Another minor tweak to the explanation of 'Views From the Top'
Follow-up to 48c3b150d

--- a/puzzlers/pzzlr-021.html
+++ b/puzzlers/pzzlr-021.html
@@ -94,7 +94,7 @@ one error found
   <p>
     The example above defines the package <tt>base</tt> and the top-level object <tt>&lt;empty&gt;.base</tt>, where the latter 
     is visible without qualification, i.e. the object shadows the package.
-    Thus the first <tt>println</tt> statement compiles fine and prints
+    Thus the first <tt>println</tt> statement compiles fine and would print
     <tt>object base</tt>.
     The access to <tt>base.Y</tt> in the second <tt>println</tt> statement,
     on the other hand, leads to the compiler error <tt>type Y is not a member
