--- a/puzzlers/pzzlr-030.html
+++ b/puzzlers/pzzlr-030.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td class="header-column"><strong>Contributed by</strong></td>
-      <td>Andrew Phillips</td>
+      <td>Andrew Phillips<br/>Updated based on suggestions by Marconi Lanna</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
@@ -18,37 +18,32 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-def printSorted(a: Array[Double]) {
-  util.Sorting.stableSort(a)
-  println(a.mkString(" "))
-}
-
-printSorted(Array(1.0, Double.NaN, 1.1))
-printSorted(Array(1.1, Double.NaN, 1.0))
+println(Seq(1.0, Double.NaN, 1.1).max)
+println(Seq(1.0, 1.1, Double.NaN).max)
 </pre>
   <ol>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-1.0 1.1 NaN
-1.0 1.1 NaN
+1.1
+1.1
 </pre>
     </li>
     <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
-1.0 NaN 1.1
-1.0 1.1 NaN
+1.1
+NaN
 </pre>
     </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-1.0 NaN 1.1
-1.1 NaN 1.0
+NaN
+NaN
 </pre>
     </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-1.0 NaN 1.1
-1.0 NaN 1.1
+1.0
+1.1
 </pre>
     </li>
   </ol>
@@ -60,12 +55,22 @@ printSorted(Array(1.1, Double.NaN, 1.0))
     <tt>Double</tt> extends <tt>Ordering</tt>, which as a total order requires that a comparison between two values yield either a <a href="https://github.com/scala/scala/blob/2.12.x/src/library/scala/math/Ordering.scala#L77-L85" target="_blank">positive, negative or zero result</a>. However, <a href="https://github.com/scala/scala/commit/460bbc1276fb4ba83b9bcbdc7f7ba475b352b7c6" target="_blank">since 2.10.0</a> the comparison operations <tt>gt</tt>, <tt>lt</tt> and <tt>equiv</tt> for <tt>Double</tt> are implemented by the primitive operators <tt>&gt;</tt>, <tt>&lt;</tt> and <tt>==</tt>. These are compliant with the IEEE floating-point specification, so all comparisons with <tt>NaN</tt> are false.
   </p>
   <p>
-    This violates the requirements of the ordering function for <tt>stableSort</tt>. In the first case, it concludes (while sorting the front half of the array) that <tt>Double.NaN</tt> is not smaller than <tt>1.0</tt>, and then that <tt>1.1</tt> is not smaller than <tt>1.0</tt> or <tt>Double.NaN</tt>, so <tt>1.0</tt> and <tt>Double.NaN</tt> are left in place.
+    This violates the expectations of the implementation of <tt>max</tt> in
+    <tt>TraversableOnce</tt>, which assumes that it can keep track of the
+    greatest element so far by checking whether it is <a href="https://github.com/scala/scala/blob/2.12.x/src/library/scala/collection/TraversableOnce.scala#L230" target="_blank">larger than or equal to the next element</a>, and choosing the next element if the comparison fails.
   </p>
   <p>
-    In the second case, <tt>stableSort</tt> concludes first that <tt>Double.NaN</tt> is not smaller than <tt>1.1</tt>, then that <tt>1.0</tt> <strong>is</strong> smaller than <tt>1.1</tt>. So <tt>1.0</tt> is inserted into the result array <em>first</em>, followed by <tt>1.1</tt> and <tt>Double.NaN</tt>, the elements from the front half of the array.
+    In the first case, this results in <tt>Double.NaN</tt> being chosen as
+    &quot;greatest-so-far&quot; after the first comparison, since <tt>1.0</tt>
+    is not larger than or equal to <tt>Double.NaN</tt>. In the next and final
+    comparison for the first sequence, <tt>Double.NaN</tt> is in turn
+    found to be not larger than or equal to <tt>1.1</tt>, so <tt>1.1</tt> is
+    returned as the maximum value.
   </p>
   <p>
-    Thus, in the first example, <tt>stableSort</tt> concludes by direct comparison that <tt>Double.NaN</tt> is <strong>not</strong> smaller than <tt>1.0</tt>. In the second case, it concludes by transitivity that <tt>1.0</tt> <em>is</em> smaller than <tt>Double.NaN</tt>, since <tt>1.0 &lt; 1.1</tt> and <tt>(Double.NaN &lt; 1.1) == false</tt>, i.e. <tt>1.1 &lt;= Double.NaN</tt>.
+    The final comparison for the second sequence, on the other hand, concludes
+    that <tt>1.1</tt> (the greatest value up to that point) is <em>not</em>
+    larger than or equal to <tt>Double.NaN</tt>. Thus <tt>Double.NaN</tt> is
+    returned as the maximum value instead.
   </p>
 </div>
